--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+byteorder = "1.5.0"
 caches = "0.2.8"
 clap = { version = "4.5.2", features = ["derive"] }
 dashmap = "5.5.3"
